--- a/SimTECH/SimTECH/Pages/Seasons/Overview/EntrantWizard/Steps/AddDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/EntrantWizard/Steps/AddDrivers.razor
@@ -39,10 +39,14 @@
 </MudContainer>
 
 @code {
-    [CascadingParameter] public AddEntrantsModel Model { get; set; }
+    [CascadingParameter]
+    public AddEntrantsModel Model { get; set; }
 
-    [Parameter, EditorRequired] public int Year { get; set; }
-    [Parameter] public IList<Contract>? Contracts { get; set; }
+    [Parameter, EditorRequired]
+    public int Year { get; set; }
+
+    [Parameter]
+    public IList<Contract>? Contracts { get; set; }
 
     private List<Driver> Drivers { get; set; } = new();
 
