--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/DriverResults.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/DriverResults.razor
@@ -67,11 +67,14 @@
 </MudPaper>
 
 @code {
-    [CascadingParameter] public OverviewModel OverviewModel { get; set; }
+    [CascadingParameter]
+    public OverviewModel OverviewModel { get; set; }
 
-    [Parameter] public List<StandingDriverModel> StandingDrivers { get; set; } = new();
+    [Parameter]
+    public List<StandingDriverModel> StandingDrivers { get; set; } = new();
 
-    [Parameter] public Dictionary<int, Country> CountryRounds { get; set; }
+    [Parameter]
+    public Dictionary<int, Country> CountryRounds { get; set; }
 
     private int lowestScoringPosition = 10;
 
