--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/SeasonEngines.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/SeasonEngines.razor
@@ -31,9 +31,11 @@
 </MudContainer>
 
 @code {
-    [CascadingParameter] public OverviewModel OverviewModel { get; set; }
+    [CascadingParameter]
+    public OverviewModel OverviewModel { get; set; }
 
-    [Parameter] public EventCallback<SeasonEngine?> OnEditorOpen { get; set; }
+    [Parameter]
+    public EventCallback<SeasonEngine?> OnEditorOpen { get; set; }
 
     private async Task AddItem() => await UpdateItem(null);
     private async Task UpdateItem(SeasonEngine? item)
