--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/Settings.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/Settings.razor
@@ -75,9 +75,11 @@
 </MudGrid>
 
 @code {
-    [CascadingParameter] public OverviewModel OverviewModel { get; set; }
+    [CascadingParameter]
+    public OverviewModel OverviewModel { get; set; }
 
-    [Parameter] public EventCallback OnEditorOpen { get; set; }
+    [Parameter]
+    public EventCallback OnEditorOpen { get; set; }
 
     private string qualyFormat = string.Empty;
 
