--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/ConstructorResults.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/ConstructorResults.razor
@@ -73,10 +73,14 @@
 </MudTable>
 
 @code {
-    [CascadingParameter] public OverviewModel OverviewModel { get; set; }
+    [CascadingParameter]
+    public OverviewModel OverviewModel { get; set; }
 
-    [Parameter] public Dictionary<int, Country> CountryRounds { get; set; }
-    [Parameter] public List<StandingTeamModel> StandingConstructors { get; set; }
+    [Parameter]
+    public Dictionary<int, Country> CountryRounds { get; set; }
+
+    [Parameter]
+    public List<StandingTeamModel> StandingConstructors { get; set; }
 
     private int lowestScoringPosition
     {
